Applied patch from changeset: 4f300b82701e Fixed workitem:14746 - MNTP header style over-stretched
--HG--
branch : 4.1.0-dev

--- a/uComponents.Core/DataTypes/MultiNodeTreePicker/MultiNodePickerStyles.css
+++ b/uComponents.Core/DataTypes/MultiNodeTreePicker/MultiNodePickerStyles.css
@@ -162,7 +162,7 @@
 {
 	width: 300px;
 	float: left;
-	clear: none;
+	clear: left;
 	margin-right: 10px;
 	height: 210px;
 }
